# finnews-intelligence-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_source_fetch_state.py  0003_nlp_model_registry.py  0004_research_export_metadata.py  0005_cross_asset_signal_foundation.py  0006_official_data_foundation.py  0007_market_reaction_validation.py  0008_mt5_readonly_bridge.py  0009_paper_execution.py
backend/src/finnews/: __init__.py  bootstrap.py  settings.py
backend/tests/: conftest.py
backend/tests/contract/: test_api.py  test_api_compliance.py  test_cli.py  test_cross_asset_api_cli.py  test_market_reaction_api_cli.py  test_mt5_readonly_api_cli.py  test_nlp_api.py  test_official_data_api_cli.py  test_paper_execution_api_cli.py  test_research_api_cli.py  test_source_api_cli.py  test_source_reviews_api.py
backend/tests/integration/: test_postgres_integration.py  test_postgres_schema.py
backend/tests/unit/: test_aggregation_repository.py  test_cross_asset.py  test_deduplication.py  test_deduplication_accounting.py  test_fixture_composition.py  test_http_safety.py  test_market_reaction.py  test_mt5_readonly.py  test_nlp_baselines.py  test_nlp_benchmark.py  test_nlp_evaluation.py  test_nlp_registry.py  test_nlp_release_audit.py  test_normalization.py  test_official_data.py  test_paper_execution.py  test_paper_execution_release_audit.py  test_pipeline.py  test_research_export.py  (+7 more)
docs/: API.md  (+78 more)
(+258 files in other folders)
