[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finnews"
version = "0.1.0"
description = "Offline synthetic financial news intelligence platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.138.0",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
finnews = "finnews.interfaces.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finnews"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["postgres: optional PostgreSQL integration tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
mypy_path = "src"
packages = ["finnews"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "dateutil.*", "yaml.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/finnews"]
omit = [
  "src/finnews/__init__.py",
  "src/finnews/infrastructure/persistence/postgres/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
